welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:46: error: not found: type i
  	setCouleurBrosse(T[i])
                           ^Array1:46: error: method T of type Array[java.awt.Color] does not take type parameters.
  	setCouleurBrosse(T[i])
                          ^Array1:47: error: Unit does not take parameters
  	marquerSol()
                  ^